[gd_scene load_steps=4 format=3 uid="uid://cesqbjhs8s37a"]

[ext_resource type="Texture2D" uid="uid://pig006h42f7y" path="res://Assets/tbj2_sprites_16x16_transparent_6-1.png" id="1_7nyfi"]
[ext_resource type="Script" uid="uid://bk2lcsd8ak4gd" path="res://Scripts/ship.gd" id="1_88h6h"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ba1si"]
radius = 35.0

[node name="Ship" type="Node2D"]
script = ExtResource("1_88h6h")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_7nyfi")
hframes = 16
vframes = 16
frame = 76

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 12

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_ba1si")

[node name="StraightTimer" type="Timer" parent="."]
autostart = true

[node name="SideTimer" type="Timer" parent="."]
autostart = true

[node name="DiagonalTimer" type="Timer" parent="."]
autostart = true

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="timeout" from="StraightTimer" to="." method="_on_straight_timer_timeout"]
[connection signal="timeout" from="SideTimer" to="." method="_on_side_timer_timeout"]
[connection signal="timeout" from="DiagonalTimer" to="." method="_on_diagonal_timer_timeout"]
